@@ -4,7 +4,7 @@
 ##
 ## by Fred Gleason <fredg@paravelsystems.com>
 ##
-## (C) Copyright 2012-2021 Fred Gleason <fredg@paravelsystems.com>
+## (C) Copyright 2012-2022 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   This program is free software; you can redistribute it and/or modify
 ##   it under the terms of the GNU General Public License version 2 as
@@ -22,7 +22,7 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-AM_CPPFLAGS = -Wall -std=c++11 -fPIC @QT5_CLI_CFLAGS@
+AM_CPPFLAGS = -Wall -std=c++11 -fPIC @QT5_GUI_CFLAGS@
 MOC = @QT_MOC@
 
 # The dependency for qt's Meta Object Compiler (moc)
@@ -35,13 +35,16 @@ clean-local:
 #instdir = @LOCAL_PREFIX@/lib
 
 lib_LTLIBRARIES = libaman.la
-dist_libaman_la_SOURCES = am.cpp am.h\
+dist_libaman_la_SOURCES = amconnection.cpp amconnection.h\
+                          am.cpp am.h\
                           amcmdswitch.cpp amcmdswitch.h\
                           amconfig.cpp amconfig.h\
                           amprofile.cpp amprofile.h\
-                          amstate.cpp amstate.h
+                          amstate.cpp amstate.h\
+                          amstatuslight.cpp amstatuslight.h
 
-nodist_libaman_la_SOURCES = 
+nodist_libaman_la_SOURCES = moc_amconnection.cpp\
+                            moc_amstatuslight.cpp
 
 libaman_la_LDFLAGS = -release $(VERSION)
 
